--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
 main {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-around;
 }
 
 h1, h4 {
@@ -19,9 +20,4 @@ h1 {
 
 /*change image size, hard coding, media screen sizes*/
 
-@media screen and (max-width: 1280px) {
-    main {
 
-    }
-}
-@media screen and (min-width: 1024px);
